--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,44 +1,48 @@
 .nav-container {
-    background-color: #C899EC;
-    padding-top: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 10vh;
+  background-color: #c899ec;
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
 }
 
 .nav-container.sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-    box-shadow: 0 4px 14px #C899EC;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  box-shadow: 0 4px 14px #c899ec;
 }
 
 .nav-logo {
-    padding: 10px 35px;
-    max-width: 100%;
-    height: auto;
+  padding: 10px 35px;
+  max-width: 100%;
+  height: auto;
 }
 
 .nav-icons {
-    font-size: 2rem;
-    cursor: pointer;
-    padding: 0 25px;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 0 25px;
+}
+
+.nav-icons a {
+  color: #000;
 }
 
 .nav-icons .facebook:hover {
-    color: #4068be;
-    transition: color 0.3s;
+  color: #4068be;
+  transition: color 0.3s;
 }
 
 .nav-icons .instagram:hover {
-    color: #d62976;
-    transition: color 0.3s;
+  color: #d62976;
+  transition: color 0.3s;
 }
 
 .nav-icons .github:hover {
-    color: #7a51da;
-    transition: color 0.3s;
+  color: #7a51da;
+  transition: color 0.3s;
 }
