--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,35 +1,88 @@
 .hero-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 100px;
-    height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 100px;
+  height: 90vh;
 }
 
 .text-container {
-    flex: 1;
+  flex: 1;
 }
 
 .text-container h1 {
-    font-size: 5rem;
-    color: #9B5ECA;
-    margin-bottom: 25px;
+  font-size: 5rem;
+  color: #9b5eca;
+  margin-bottom: 25px;
 }
 
 .text-container p {
-    font-style: italic;
-    font-weight: 300;
-    font-size: 1.25rem;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 1.25rem;
 }
 
 .image-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .hero-image {
-    max-width: 100%;
-    max-height: 750px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* 1080 screen size */
+@media screen and (max-width: 1080px) {
+  .hero-container {
+    padding: 0px 70px;
+  }
+
+  .text-container h1 {
+    font-size: 4rem;
+  }
+
+  .text-container p {
+    font-size: 1.15rem;
+  }
+}
+
+/* 768 screen size */
+@media screen and (max-width: 768px) {
+  .hero-container {
+    flex-direction: column-reverse;
+    padding: 50px 70px;
+  }
+
+  .text-container {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .text-container h1 {
+    font-size: 4rem;
+    margin-bottom: 15px;
+  }
+
+  .image-container {
+    width: 100%;
+    height: 50%;
+  }
+}
+/* 600 screen size */
+@media screen and (max-width: 600px) {
+  .hero-container {
+    padding: 50px 20px;
+  }
+
+  .text-container h1 {
+    font-size: 3.5rem;
+  }
+
+  .text-container p {
+    font-size: 1rem;
+  }
 }
