--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -46,3 +46,23 @@
   color: #7a51da;
   transition: color 0.3s;
 }
+
+/* 600 screen size */
+@media screen and (max-width: 500px) {
+  .nav-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 15vh;
+  }
+
+  .nav-logo {
+    padding: 5px 0px;
+  }
+
+  .nav-icons {
+    font-size: 1.5rem;
+    padding: 0;
+  }
+}
