--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,40 +1,114 @@
 .about-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-    padding: 0px 100px;
-    height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse;
+  padding: 0px 100px;
+  height: 90vh;
 }
 
 .about-text {
-    flex: 1;
-    margin-left: 100px;
-    text-align: right;
+  flex: 1;
+  margin-left: 100px;
+  text-align: right;
 }
 
 .about-text h1 {
-    font-size: 5rem;
-    color: #9b5eca;
-    margin-bottom: 25px;
+  font-size: 5rem;
+  color: #9b5eca;
+  margin-bottom: 25px;
 }
 
 .about-text p {
-    font-style: italic;
-    font-weight: 300;
-    font-size: 1.25rem;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 1.25rem;
 }
 
 .about-img {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .about-image {
-    max-width: 100%;
-    max-height: 600px;
-    border-radius: 10px;
+  max-width: 100%;
+  max-height: 600px;
+  border-radius: 10px;
+}
+
+/* 1080 screen size */
+@media screen and (max-width: 1080px) {
+  .about-container {
+    padding: 0px 70px;
+  }
+
+  .about-text h1 {
+    font-size: 4rem;
+  }
+
+  .about-text p {
+    font-size: 1.15rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .about-text {
+    margin-left: 50px;
+  }
+}
+
+/* 768 screen size */
+@media screen and (max-width: 768px) {
+  .about-container {
+    flex-direction: column-reverse;
+    padding: 50px 70px;
+  }
+
+  .about-text {
+    text-align: center;
+    margin-bottom: 30px;
+    margin-left: 0;
+  }
+
+  .about-text h1 {
+    font-size: 4rem;
+    margin-bottom: 15px;
+  }
+
+  .about-img {
+    width: 100%;
+    height: 50%;
+    margin-bottom: 25px;
+  }
+}
+/* 600 screen size */
+@media screen and (max-width: 600px) {
+  .about-container {
+    padding: 70px 20px;
+  }
+
+  .about-text h1 {
+    font-size: 3.5rem;
+  }
+
+  .about-text p {
+    font-size: 1rem;
+  }
+}
+/* 500 screen size */
+@media screen and (max-width: 600px) {
+  .about-container {
+    padding: 70px 20px;
+  }
+
+  .about-text h1 {
+    font-size: 3.5rem;
+  }
+
+  .about-text p {
+    font-size: 1rem;
+  }
 }
