--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -39,6 +39,11 @@
   border-radius: 10px;
 }
 
+/* DARK MODE */
+.dark-mode .about-text h1 {
+  color: #c899ec;
+}
+
 /* 1080 screen size */
 @media screen and (max-width: 1080px) {
   .about-container {
@@ -84,6 +89,7 @@
     margin-bottom: 25px;
   }
 }
+
 /* 600 screen size */
 @media screen and (max-width: 600px) {
   .about-container {
