--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -95,6 +95,7 @@
 
 .slider-button {
   padding: 15px;
+  text-decoration: none;
   font-size: 1.05rem;
   font-weight: 500;
   color: #fff;
@@ -102,6 +103,13 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.4s;
+}
+
+.slider-button:hover {
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #000;
 }
 
 .slides:hover .image-overlay {
@@ -130,6 +138,13 @@
 
 .dark-mode .slider-button {
   background-color: #c899ec;
+  transition: background-color 0.4s;
+}
+
+.dark-mode .slider-button:hover {
+  background-color: #242424;
+  color: #fff;
+  border: 1px solid #fff;
 }
 
 /* 1080 screen size */
